[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "marten"
version = "0.1.0"
description = "Local-first agent control plane for issue-driven coding and review workflows."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.116,<1.0",
  "langgraph>=0.6,<1.0",
  "langsmith>=0.4,<1.0",
  "mcp>=1.26,<2.0",
  "milvus-lite>=2.5,<3.0",
  "pymilvus>=2.6,<3.0",
  "pydantic-settings>=2.10,<3.0",
  "qdrant-client>=1.11,<2.0",
  "sentence-transformers>=3.2,<4.0",
  "tiktoken>=0.9,<1.0",
  "torch>=2.4,<3.0",
  "transformers>=4.45,<5.0",
  "uvicorn[standard]>=0.35,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
